// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when fetching resources loading spinner matches the snapshot 1`] = `
<tr
  className="flex"
>
  <td
    className="col-3"
  >
    foo
  </td>
  <td
    className="col-9"
  >
    <LoadingWrapper
      loaded={false}
      type={1}
    />
  </td>
</tr>
`;

exports[`when fetching resources loading spinner matches the snapshot 2`] = `
<tr
  className="flex"
>
  <td
    className="col-3"
  >
    foo
  </td>
  <td
    className="col-9"
  >
    <LoadingWrapper
      loaded={false}
      type={1}
    />
  </td>
</tr>
`;

exports[`when there is a valid resouce renders info about the resource status 1`] = `
<tr
  className="flex"
>
  <DeploymentItemRow
    resource={
      Object {
        "metadata": Object {
          "name": "foo",
          "selfLink": "/deployments/foo",
        },
        "status": Object {
          "availableReplicas": 1,
          "replicas": 1,
          "updatedReplicas": 1,
        },
      }
    }
  />
</tr>
`;

exports[`when there is a valid resouce renders info about the resource status when given a list 1`] = `
<tr
  className="flex"
  key="/deployments/foo"
>
  <DeploymentItemRow
    resource={
      Object {
        "metadata": Object {
          "name": "foo",
          "selfLink": "/deployments/foo",
        },
        "status": Object {
          "availableReplicas": 1,
          "replicas": 1,
          "updatedReplicas": 1,
        },
      }
    }
  />
</tr>
`;
